--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.taskdefs.condition.Os
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -16,7 +14,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
     }
 }
 
@@ -29,11 +27,8 @@ ktlint {
 
 // Generate a version code from git commit count
 static def generateVersionCode() {
-    if (Os.isFamily(Os.FAMILY_MAC)) {
-        return "git rev-list HEAD --count".execute().waitFor().toInteger()
-    } else {
+//        return "git rev-list HEAD --count".execute().waitFor().toInteger()
         return "git rev-list HEAD --count".execute().text.trim().toInteger()
-    }
 }
 
 
@@ -57,6 +52,12 @@ android {
             keyPassword "N/A"
             storeFile file("build.keystore")
             storePassword "N/A"
+        }
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 
@@ -88,7 +89,7 @@ android {
         exclude 'META-INF/kotlinx-coroutines-core.kotlin_module'
         exclude 'META-INF/DEPENDENCIES'
     }
-    ndkVersion '21.1.6352462'
+    ndkVersion '21.4.7075529'
 }
 
 repositories {
@@ -100,19 +101,7 @@ repositories {
 
 allprojects {
     repositories {
-        jcenter()
-        flatDir {
-            dirs '../common/libs'
-        }
-    }
-}
-
-allprojects {
-    repositories {
-        jcenter()
-        flatDir {
-            dirs '../common/libs'
-        }
+        mavenCentral()
     }
 }
 
