--- a/atomic-swap/build.gradle
+++ b/atomic-swap/build.gradle
@@ -7,7 +7,6 @@ plugins {
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 22
@@ -26,25 +25,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
         allWarningsAsErrors = true
     }
+
     buildFeatures {
         viewBinding true
     }
+
     testOptions {
         unitTests.returnDefaultValues = true
-    }
-}
-
-repositories {
-    flatDir {
-        dirs '../common/libs'
     }
 }
 
