--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
     ext.ktlint_version = '0.40.0'
     ext.coroutines_version = '1.4.2'
     ext.ktlint_gradle_version = '10.0.0'
-    ext.sqldelight_version = '1.2.1'
-    ext.nav_version = "2.2.1"
+    ext.sqldelight_version = '1.4.4'
+    ext.nav_version = "2.3.5"
     ext.fragment_version = '1.2.4'
     ext.lifecycle_version = "2.2.0"
     ext.dokka_version = "0.10.1"
@@ -18,7 +18,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:7.0.0-rc01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_gradle_version"
         classpath "com.squareup.sqldelight:gradle-plugin:$sqldelight_version"
