--- a/currencyii/build.gradle
+++ b/currencyii/build.gradle
@@ -35,7 +35,6 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
-        allWarningsAsErrors = true
     }
 
     buildFeatures {
@@ -46,7 +45,8 @@ android {
         unitTests.returnDefaultValues = true
     }
 
-    lintOptions {
+    namespace 'nl.tudelft.trustchain.currencyii'
+    lint {
         abortOnError false
     }
 }
@@ -57,7 +57,7 @@ dependencies {
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -107,6 +107,6 @@ dependencies {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes"
+        "-opt-in=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes"
     ]
 }
