--- a/trustchain-voter/build.gradle
+++ b/trustchain-voter/build.gradle
@@ -44,13 +44,14 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'nl.tudelft.trustchain.voting'
 
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
