--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,12 @@ static def generateVersionCode() {
 
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "nl.tudelft.trustchain"
         minSdkVersion 22
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode generateVersionCode()
         versionName "0.3"
 
@@ -78,18 +77,19 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
-        allWarningsAsErrors = true
     }
 
     buildFeatures {
         viewBinding = true
     }
-
     packagingOptions {
-        exclude 'META-INF/kotlinx-coroutines-core.kotlin_module'
-        exclude 'META-INF/DEPENDENCIES'
+        resources {
+            excludes += ['META-INF/kotlinx-coroutines-core.kotlin_module', 'META-INF/DEPENDENCIES']
+        }
     }
+
     ndkVersion '21.4.7075529'
+    namespace 'nl.tudelft.trustchain.app'
 }
 
 repositories {
@@ -97,11 +97,14 @@ repositories {
         url = 'https://raw.githubusercontent.com/blockchain/api-v1-client-java/mvn-repo/'
     }
     mavenCentral()
+    jcenter()
 }
 
 allprojects {
     repositories {
         mavenCentral()
+        jcenter()
+
     }
 }
 
@@ -140,7 +143,7 @@ dependencies {
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -151,6 +154,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.work:work-runtime-ktx:2.7.0"
 
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
@@ -181,7 +185,7 @@ dependencies {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
-        "-Xopt-in=kotlin.RequiresOptIn"
+        "-opt-in=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
+        "-opt-in=kotlin.RequiresOptIn"
     ]
 }
