--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="nl.tudelft.trustchain.app">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -32,16 +31,17 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup"
-        android:requestLegacyExternalStorage="true"
-        android:largeHeap="true">
+        tools:ignore="AllowBackup">
 
         <activity
             android:name=".ui.dashboard.DashboardActivity"
+            android:exported="true"
             android:label="Trustchain Superapp"
             android:launchMode="singleTop">
             <intent-filter>
@@ -115,10 +115,11 @@
 
         <activity
             android:name="nl.tudelft.trustchain.valuetransfer.ValueTransferMainActivity"
+            android:exported="true"
+            android:launchMode="singleTop"
             android:parentActivityName=".ui.dashboard.DashboardActivity"
-            android:theme="@style/Theme.ValueTransfer"
             android:screenOrientation="portrait"
-            android:launchMode="singleTop">
+            android:theme="@style/Theme.ValueTransfer">
             <tools:validation testUrl="http://trustchain.tudelft.nl/requestMoney?receiver=Tat&amp;amount=15.23&amp;message=party" />
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
@@ -128,7 +129,7 @@
 
                 <data android:scheme="http" />
                 <data android:scheme="https" />
-                <data android:host="trustchain.tudelft.nl"/>
+                <data android:host="trustchain.tudelft.nl" />
                 <data android:pathPrefix="/requestMoney" />
             </intent-filter>
         </activity>
@@ -141,6 +142,7 @@
 
         <activity
             android:name="com.example.musicdao.MusicService"
+            android:exported="true"
             android:label="Music app"
             android:parentActivityName=".ui.dashboard.DashboardActivity"
             android:screenOrientation="portrait">
@@ -154,6 +156,7 @@
 
         <activity
             android:name="nl.tudelft.trustchain.literaturedao.LiteratureDaoActivity"
+            android:exported="true"
             android:label="Literature sharing app"
             android:parentActivityName=".ui.dashboard.DashboardActivity"
             android:screenOrientation="portrait">
@@ -174,7 +177,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBAGd8-KwX1epS_0CPl5RF0hD8VeTmM-7Y"/>
+            android:value="AIzaSyBAGd8-KwX1epS_0CPl5RF0hD8VeTmM-7Y" />
     </application>
 
 </manifest>
