--- a/atomic-swap/build.gradle
+++ b/atomic-swap/build.gradle
@@ -6,11 +6,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 22
-        targetSdkVersion 31
+        targetSdkVersion 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -39,7 +39,6 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
-        allWarningsAsErrors = true
     }
 
     buildFeatures {
@@ -49,6 +48,7 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+    namespace 'nl.tudelft.trustchain.atomicswap'
 }
 
 dependencies {
@@ -58,7 +58,7 @@ dependencies {
     implementation project(":ipv8-android")
 
     // TODO: Newer than the rest of apps - should we leave or downgrade
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
 
