--- a/common-ethereum/build.gradle
+++ b/common-ethereum/build.gradle
@@ -42,6 +42,7 @@ android {
         jvmTarget = '1.8'
         allWarningsAsErrors = true
     }
+    namespace 'nl.tudelft.trustchain.common.ethereum'
 }
 
 dependencies {
@@ -54,7 +55,7 @@ dependencies {
 
     implementation files("../common/libs/geth-android-all-1.10.1-c2d2f4ed.aar")
 
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
 
