--- a/distributedai/build.gradle
+++ b/distributedai/build.gradle
@@ -31,6 +31,7 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'nl.tudelft.trustchain.distributedAI'
 }
 
 dependencies {
@@ -38,7 +39,7 @@ dependencies {
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
