--- a/eurotoken/build.gradle
+++ b/eurotoken/build.gradle
@@ -38,6 +38,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'nl.tudelft.trustchain.eurotoken'
 }
 
 dependencies {
@@ -45,7 +46,7 @@ dependencies {
     implementation project(':common')
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
