--- a/gossipML/build.gradle
+++ b/gossipML/build.gradle
@@ -20,7 +20,6 @@ repositories {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
 
     useLibrary 'android.test.base'
     useLibrary 'android.test.mock'
@@ -58,24 +57,17 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
-        allWarningsAsErrors = true
     }
 
     testOptions {
         unitTests.returnDefaultValues = true
     }
-
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
-        exclude("META-INF/*.kotlin_module")
+        resources {
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0', 'META-INF/*.kotlin_module']
+        }
     }
+
 
     sourceSets {
         androidTest {
@@ -93,6 +85,7 @@ android {
         }
     }
     ndkVersion '21.4.7075529'
+    namespace 'nl.tudelft.trustchain.gossipML'
 }
 
 dependencies {
@@ -107,7 +100,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.9.0'
 //    implementation "androidx.collection:collection-ktx:1.3.2"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -140,7 +133,7 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
     testImplementation "org.robolectric:robolectric:3.4.2"
     testImplementation "com.goterl:lazysodium-java:5.0.1"
-    testImplementation 'androidx.core:core-ktx:1.3.2'
+    testImplementation 'androidx.core:core-ktx:1.9.0'
 
     // Testing and generating example data
      implementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
@@ -156,6 +149,6 @@ dependencies {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes"
+        "-opt-in=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes"
     ]
 }
