--- a/liquidity-pool/build.gradle
+++ b/liquidity-pool/build.gradle
@@ -55,24 +55,18 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
-        allWarningsAsErrors = true
     }
 
     testOptions {
         unitTests.returnDefaultValues = true
     }
-
     packagingOptions {
-        exclude "META-INF/DEPENDENCIES"
-        exclude "META-INF/LICENSE"
-        exclude "META-INF/LICENSE.txt"
-        exclude "META-INF/license.txt"
-        exclude "META-INF/NOTICE"
-        exclude "META-INF/NOTICE.txt"
-        exclude "META-INF/notice.txt"
-        exclude "META-INF/ASL2.0"
-        exclude("META-INF/*.kotlin_module")
+        resources {
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0', 'META-INF/*.kotlin_module']
+        }
     }
+
+    namespace 'nl.tudelft.trustchain.liquidity'
 }
 
 allprojects {
@@ -92,7 +86,7 @@ dependencies {
     // Android Libraries
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.preference:preference:1.1.1"
-    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "androidx.core:core-ktx:1.9.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
 
     // Layout libraries
@@ -117,8 +111,7 @@ dependencies {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
-        "-Werror" // Set Kotlin compiler warnings as errors
+        "-opt-in=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
     ]
 }
 
