--- a/peerchat/build.gradle
+++ b/peerchat/build.gradle
@@ -44,12 +44,12 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
-        allWarningsAsErrors = true
     }
 
     buildFeatures {
         viewBinding = true
     }
+    namespace 'nl.tudelft.trustchain.peerchat'
 }
 
 dependencies {
@@ -57,7 +57,7 @@ dependencies {
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -97,6 +97,6 @@ dependencies {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-Xopt-in=kotlin.RequiresOptIn"
+        "-opt-in=kotlin.RequiresOptIn"
     ]
 }
