--- a/trustchain-payloadgenerator/build.gradle
+++ b/trustchain-payloadgenerator/build.gradle
@@ -43,13 +43,14 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'nl.tudelft.trustchain.payloadgenerator'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation project(':common')
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
