--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -35,10 +35,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
-
     packagingOptions {
-        exclude 'META-INF/kotlinx-coroutines-core.kotlin_module'
+        resources {
+            excludes += ['META-INF/kotlinx-coroutines-core.kotlin_module']
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -51,12 +53,12 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        allWarningsAsErrors = true
     }
     buildFeatures {
         viewBinding = true
     }
     ndkVersion '21.1.6352462'
+    namespace 'nl.tudelft.trustchain.valuetransfer'
 }
 
 dependencies {
@@ -64,7 +66,7 @@ dependencies {
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -134,7 +136,6 @@ dependencies {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
-        "-Werror" // Set Kotlin compiler warnings as errors
+        "-opt-in=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
     ]
 }
