--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,14 @@
 name: build
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - master
+    pull_request
 
 jobs:
   test:
+    if: ${{ false }}  # disable for now
     name: Run Tests
     runs-on: ubuntu-latest
     steps:
@@ -52,7 +57,13 @@ jobs:
           java-version: 8
 
       - name: Build release APK
-        run: bash ./gradlew assembleRelease
+        run: |
+          echo $KEYSTORE_FILE | base64 -d > app/build.keystore
+          ./gradlew assembleRelease \
+            -Pandroid.injected.signing.store.file=$(pwd)/app/build.keystore \
+            -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
+            -Pandroid.injected.signing.key.alias=$KEY_ALIAS \
+            -Pandroid.injected.signing.key.password=$KEY_PASSWORD
         env:
           KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
