--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: build
 
 on:
+  pull_request:
   push:
-    branches:
-      - master
-    pull_request
+    branches: master
 
 jobs:
   test:
