Fixing linting issues and upgrade testing and QR dependencies

--- a/freedomOfComputing/src/main/AndroidManifest.xml
+++ b/freedomOfComputing/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <application>
         <activity
             android:name=".ExecutionActivity"
+            android:exported="false"
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
             android:name="nl.tudelft.trustchain.FOC.MainActivityFOC"
