--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-
+        <!-- TODO: verify the validity of used export options -->
         <activity
             android:name=".ui.dashboard.DashboardActivity"
             android:exported="true"
@@ -140,6 +140,7 @@
 
         <activity
             android:name="nl.tudelft.trustchain.valuetransfer.passport.PassportCaptureActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:windowSoftInputMode="stateAlwaysHidden" />
@@ -172,7 +173,9 @@
                 android:resource="@xml/searchable" />
         </activity>
 
-        <service android:name="nl.tudelft.trustchain.app.service.TrustChainService" />
+        <service
+            android:name="nl.tudelft.trustchain.app.service.TrustChainService"
+            android:exported="false" />
 
         <service
             android:name="com.example.musicdao.MusicGossipingService"
@@ -182,6 +185,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBAGd8-KwX1epS_0CPl5RF0hD8VeTmM-7Y" />
+
     </application>
+
 
 </manifest>
