--- a/literaturedao/build.gradle
+++ b/literaturedao/build.gradle
@@ -8,10 +8,10 @@ plugins {
 apply plugin: 'kotlinx-serialization'
 
 android {
-    compileSdk 29
+    compileSdkVersion 33
     defaultConfig {
         minSdkVersion 22
-        targetSdk 29
+        targetSdkVersion 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
