--- a/freedomOfComputing/build.gradle
+++ b/freedomOfComputing/build.gradle
@@ -28,14 +28,11 @@ android {
         }
     }
 
-// To inline the bytecode built with JVM target 1.8 into
-// bytecode that is being built with JVM target 1.6. (e.g. navArgs)
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = "1.8"
         allWarningsAsErrors = true
@@ -44,17 +41,19 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
     namespace 'nl.tudelft.trustchain.FOC'
 
 }
 
 dependencies {
     // TODO fix direct import, this should rely on common.
-    implementation files('../common/libs/jlibtorrent-1.2.10.0.jar')
-    implementation files('../common/libs/jlibtorrent-android-arm64-1.2.10.0.jar')
-    implementation files('../common/libs/jlibtorrent-android-arm-1.2.10.0.jar')
-    implementation files('../common/libs/jlibtorrent-android-x86-1.2.10.0.jar')
-    implementation files('../common/libs/jlibtorrent-android-x86_64-1.2.10.0.jar')
+    // BitTorrent
+    implementation files('../common/libs/jlibtorrent-' + jlibtorrent_version + '.jar')
+    implementation files('../common/libs/jlibtorrent-android-arm64-' + jlibtorrent_version + '.jar ')
+    implementation files('../common/libs/jlibtorrent-android-arm-' + jlibtorrent_version + '.jar ')
+    implementation files('../common/libs/jlibtorrent-android-x86-' + jlibtorrent_version + '.jar ')
+    implementation files('../common/libs/jlibtorrent-android-x86_64' + jlibtorrent_version + '.jar ')
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.9.0'
