--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     ext.nav_version = '2.5.3'
     ext.fragment_version = '1.5.4'
     ext.lifecycle_version = "2.5.1"
+    ext.jlibtorrent_version = '1.2.17.0'
     ext.dokka_version = "0.10.1"
     repositories {
         google()
