--- a/musicdao-datafeeder/build.gradle
+++ b/musicdao-datafeeder/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation "com.squareup.sqldelight:coroutines-extensions:$sqldelight_version"
     implementation 'org.bitcoinj:bitcoinj-core:0.15.10'
 
-    implementation files('libs/jlibtorrent-1.2.10.0.jar')
+    implementation files('../common/libs/jlibtorrent-' + jlibtorrent_version + '.jar')
+
 }
 
 application {
