--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -61,11 +61,12 @@ dependencies {
     }
 
     // TODO fix direct import, this should rely on common.
-    implementation files('../common/libs/jlibtorrent-1.2.10.0.jar')
-    implementation files('../common/libs/jlibtorrent-android-arm64-1.2.10.0.jar')
-    implementation files('../common/libs/jlibtorrent-android-arm-1.2.10.0.jar')
-    implementation files('../common/libs/jlibtorrent-android-x86-1.2.10.0.jar')
-    implementation files('../common/libs/jlibtorrent-android-x86_64-1.2.10.0.jar')
+    // BitTorrent
+    implementation files('../common/libs/jlibtorrent-' + jlibtorrent_version + '.jar')
+    implementation files('../common/libs/jlibtorrent-android-arm64-' + jlibtorrent_version + '.jar ')
+    implementation files('../common/libs/jlibtorrent-android-arm-' + jlibtorrent_version + '.jar ')
+    implementation files('../common/libs/jlibtorrent-android-x86-' + jlibtorrent_version + '.jar ')
+    implementation files('../common/libs/jlibtorrent-android-x86_64' + jlibtorrent_version + '.jar ')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
