--- a/freedomOfComputing/build.gradle
+++ b/freedomOfComputing/build.gradle
@@ -28,6 +28,12 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['../common/libs']
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -50,10 +56,10 @@ dependencies {
     // TODO fix direct import, this should rely on common.
     // BitTorrent
     implementation files('../common/libs/jlibtorrent-' + jlibtorrent_version + '.jar')
-    implementation files('../common/libs/jlibtorrent-android-arm64-' + jlibtorrent_version + '.jar ')
-    implementation files('../common/libs/jlibtorrent-android-arm-' + jlibtorrent_version + '.jar ')
-    implementation files('../common/libs/jlibtorrent-android-x86-' + jlibtorrent_version + '.jar ')
-    implementation files('../common/libs/jlibtorrent-android-x86_64' + jlibtorrent_version + '.jar ')
+    implementation files('../common/libs/jlibtorrent-android-arm64-' + jlibtorrent_version + '.jar')
+    implementation files('../common/libs/jlibtorrent-android-arm-' + jlibtorrent_version + '.jar')
+    implementation files('../common/libs/jlibtorrent-android-x86-' + jlibtorrent_version + '.jar')
+    implementation files('../common/libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.9.0'
