--- a/gossipML/build.gradle
+++ b/gossipML/build.gradle
@@ -80,7 +80,7 @@ android {
         abi {
             enable true
             reset()
-            include 'x86', 'armeabi-v7a', 'x86_64'
+            include 'arm64-v8a', 'x86', 'armeabi-v7a', 'x86_64'
             universalApk true
         }
     }
