--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     ext.lifecycle_version = "2.5.1"
     ext.jlibtorrent_version = '1.2.17.0'
     ext.dokka_version = "0.10.1"
+    ext.hilt_ver = '2.44.2'
     repositories {
         google()
         jcenter()
