Update Room dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     ext.jlibtorrent_version = '1.2.17.0'
     ext.dokka_version = "0.10.1"
     ext.hilt_ver = '2.44.2'
+    ext.room_version = '2.4.0'
     repositories {
         google()
         jcenter()
