--- a/eurotoken/build.gradle
+++ b/eurotoken/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.room:room-runtime:2.2.2'
+    implementation "androidx.room:room-runtime:$room_version"
 
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
@@ -82,7 +82,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    annotationProcessor 'androidx.room:room-compiler:2.2.2'
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
 
 }
