--- a/app/build.gradle
+++ b/app/build.gradle
@@ -191,10 +191,10 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:$hilt_ver")
 
     // Room
-    implementation "androidx.room:room-runtime:2.3.0"
-    implementation("androidx.room:room-ktx:2.3.0")
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
-    kapt("androidx.room:room-compiler:2.3.0")
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation("androidx.room:room-ktx:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt("androidx.room:room-compiler:$room_version")
 }
 
 
