--- a/common/build.gradle
+++ b/common/build.gradle
@@ -134,7 +134,7 @@ dependencies {
     testImplementation 'org.json:json:20190722'
     testImplementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
     testImplementation "com.goterl:lazysodium-java:5.1.4"
-    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
 
 
