--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -161,10 +161,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-animation:0.29.1-alpha"
 
     // Room
-    implementation "androidx.room:room-runtime:2.3.0"
-    implementation("androidx.room:room-ktx:2.3.0")
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
-    kapt("androidx.room:room-compiler:2.3.0")
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation("androidx.room:room-ktx:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt("androidx.room:room-compiler:$room_version")
 
     // Hilt
     implementation("com.google.dagger:hilt-android:$hilt_ver")
