--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -1,19 +1,21 @@
 name: apk
 
 on:
-  pull_request:
-  push:
-    branches: master
+  pull_request_target:
+#  push:
+#    branches: master
 
 jobs:
   apk:
     name: Build APK
     runs-on: ubuntu-latest
+    environment:
+      name: apk_build
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          ref: refs/pull/${{github.event.pull_request.number}}/merge
 
       - name: Checkout submodules
         shell: bash
