--- a/.github/workflows/apk_pr.yml
+++ b/.github/workflows/apk_pr.yml
@@ -1,9 +1,7 @@
-name: apk
+name: Build APK for PR
 
 on:
   pull_request_target:
-  push:
-    branches: master
 
 jobs:
   apk:
@@ -17,13 +15,8 @@ jobs:
         with:
           ref: refs/pull/${{github.event.pull_request.number}}/merge
 
-      - name: Checkout submodules
-        shell: bash
-        run: |
-          git config --global url."https://github.com/".insteadOf "git@github.com:"
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      - uses: ./.github/actions/checkout_submodules
+
       - name: Setup Java
         uses: actions/setup-java@v1
         with:
