Added new submodule

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,4 +35,5 @@ include ':valuetransfer'
 include ':atomic-swap'
 include ':literaturedao'
 include ':geth-android'
-include ':detoks'
+//include ':detoks'
+include ':detoks-uvt'
