--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,7 +125,8 @@ dependencies {
     implementation project(':valuetransfer')
     implementation project(':atomic-swap')
     implementation project(':literaturedao')
-    implementation project(':detoks')
+    //implementation project(':detoks')
+    implementation project(':detoks-uvt')
     api(project(':common')) {
         exclude group: 'net.java.dev.jna'
     }
