--- a/detoks-engine/src/main/AndroidManifest.xml
+++ b/detoks-engine/src/main/AndroidManifest.xml
@@ -14,5 +14,9 @@
             android:label="@string/title_activity_main_detoks"
             android:theme="@style/Fullscreen"
             android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".manage_tokens.TokenManageActivity"
+            android:label="@string/title_activity_main_detoks"
+            android:theme="@style/Fullscreen" />
     </application>
 </manifest>
