Fixed lint issues

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -186,10 +186,10 @@
             android:enabled="true"
             android:exported="false" />
 
-        <service
-            android:name="nl.tudelft.trustchain.detoks.GossiperService"
-            android:enabled="true"
-            android:exported="false" />
+<!--        <service-->
+<!--            android:name="nl.tudelft.trustchain.detoks.GossiperService"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="false" />-->
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
